=exposed all 13 actuator endpoints info, health, beans , threaddump, mappings , etc...

--- a/03-actuator-demo/src/main/resources/application.properties
+++ b/03-actuator-demo/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=firstSpringApp
 
 
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
+info.app.name=PT-OD_Knock
+info.app.description=Amazing game from Hideo Kojima & Jordan Peele, a spiritual successor to PT (Silent Hills)
+info.app.version=1.0.0
