=added custom property to application properties file and used / injected it into the website

--- a/06-injection-properties-demo/src/main/resources/application.properties
+++ b/06-injection-properties-demo/src/main/resources/application.properties
@@ -11,3 +11,8 @@ info.app.version=1.0.0
 
 spring.security.user.name=L!$@
 spring.security.user.password=RU$ureUrTheOnlyU?
+
+
+
+coach.name=Mickey Mouse
+team.name=Disney
